# any2md

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/commands/: add-converter.md  fix-issue.md  review-pr.md  test-converter.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-10-any2md-design.md  2026-03-10-any2md-implementation.md  2026-03-10-new-converters.md  2026-03-10-pdf-quality-fixes.md  2026-03-11-github-actions-release-design.md  2026-03-11-github-actions-release-plan.md
src/: error.rs  lib.rs  main.rs
src/converter/: mod.rs
src/converter/audio/: mod.rs
src/converter/image_ocr/: mod.rs
src/converter/pdf/: assembler.rs  classifier.rs  extractor.rs  mod.rs  table_detector.rs
src/converter/web/: mod.rs
src/model/: document.rs  mod.rs  options.rs
src/renderer/: markdown.rs
tests/: converter_tests.rs  integration_test.rs  model_tests.rs  renderer_tests.rs
