[package]
name = "any2md"
version = "0.1.0"
edition = "2021"
description = "CLI utility for converting files to Markdown"

[dependencies]
clap = { version = "4", features = ["derive"] }
lopdf = "0.34"
image = "0.25"
base64 = "0.22"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
