[package]
name = "any2md"
version = "0.1.0"
edition = "2021"
description = "CLI utility for converting files to Markdown"

[dependencies]
clap = { version = "4", features = ["derive"] }
lopdf = "0.34"
image = "0.25"
base64 = "0.22"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Audio converter
whisper-rs = "0.12"
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "wav", "aac"] }

# Web converter
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
scraper = "0.21"

# Image OCR converter (uses tesseract CLI or cloud API — no system build deps)

# Shared
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
